[SIP2-150] - Fixing failed tests.